--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <h1>Hellouuu</h1>
     <!-- Script -->
     <script src="script.js"></script>
 </body>
