--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    <h1>Hellouuu</h1>
+<body><h1>hellou</h1>
     <!-- Script -->
     <script src="script.js"></script>
 </body>
